# aismartspider

./: README.md  experiment_results.json  pyproject.toml
aismartspider/: __init__.py  ai_client.py  ai_prompts.py  cli.py  config.py  dom_summary.py  executor.py  fetcher.py  intent_parser.py  models.py  output.py  page_classifier.py  strategy_builder.py
aismartspider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aismartspider/metrics/: extraction.py  page_understanding.py  system_metrics.py
aismartspider/utils/: json_utils.py  logging_utils.py  retry.py
examples/: demo_basic.py  eval_metrics.py  run_experiments.py
metrics/: README.md
tests/: test_classifier.py  test_executor_flows.py  test_fetcher_logic.py  test_heuristics.py  test_output.py  test_smoke.py
tests/fixtures/: forum.html  gallery.html  list.html  news.html
