[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aismartspider"
version = "0.1.0"
description = "AI-driven webpage understanding and automatic extraction strategy framework."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["crawler", "web scraping", "AI", "agent", "information extraction"]

dependencies = [
  "requests",
  "beautifulsoup4",
  "lxml",
  "playwright",
  "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/aismartspider"

[project.scripts]
aismartspider = "aismartspider.cli:main"
