[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aismartspider"
version = "0.1.0"
description = "AI-driven webpage understanding and automatic extraction strategy framework."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "NJNAN2597" }
]
keywords = ["crawler", "web scraping", "AI", "agent", "information extraction"]

dependencies = [
  "curl_cffi>=0.6.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "playwright>=1.48.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.8.0"]
mysql = ["pymysql>=1.1.0"]
postgres = ["psycopg2-binary>=2.9.9"]
selenium = ["selenium>=4.20.0"]

[project.urls]
Homepage = "https://github.com/NJNAN/aismartspider"
Repository = "https://github.com/NJNAN/aismartspider"
Changelog = "https://github.com/NJNAN/aismartspider/commit/711c5dc9d8c8c4c97818e144f0da30f907212c02"

[project.scripts]
aismartspider = "aismartspider.cli:main"
